# whisper_wrapper_client

./: LICENSE  README.md  pyproject.toml
tests/: config.py  main_send_crop_sound.py  main_send_file_and_report.py  main_send_rawdata.py
whisper_wrapper_client/: __init__.py  __main__.py  sound_recode_process.py  sound_reocde_and_crop.py  whisper_wrapper_client.py
