[build-system]
requires = ["setuptools"]

[project]
name = "whisper_wrapper_client"
description = "clinet for whisper wrapper server"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
version = "2025.03.27"
dependencies = [
    'numpy',
    'soundcard'
]
[tool.setuptools.packages.find]
exclude = ["build", "tests"]

